--- a/src/app/components/site-map/site-map.html
+++ b/src/app/components/site-map/site-map.html
@@ -6,12 +6,12 @@
 <h2>Location</h2>
 
 @if(!lat) {
-  <div>
+  <div class="m-3">
     Position not found.
   </div>
 }
 
-<div class=" mt-4  d-flex container justify-content-center" id="map">
+<div class=" mt-4  d-flex container justify-content-center" id="map"></div>
 
-</div>
+
 </div>
